--- a/SpringWork2020G1/app/src/main/webapp/css/index.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/index.css
@@ -1,22 +1,33 @@
-body{
-  font-family: 'UD デジタル 教科書体 NK-B',UD Digi Kyokasho NK-B;
+/* body{
+  font-family: Roboto;
+} */
+
+header {
+  display: flex;
+  padding: 10px;
+  width: 100%;
+  height: 50px;
+  background-color: #cccccc;
+  align-items: center;
+  font-size: 18px;
+}
+
+body {
+  margin: 0px;
+  color: #053C58;
+}
+
+.h1 {
+  margin: 60px;
+  font-size: 32px;
   text-align: center;
 }
 
-input{
-  border: none;
-  margin: 0.5rem 0;
-  padding: 0.5rem 1rem;
-  border-radius: 0.3rem;
-  background: #fffbeb;
-}
-
-input[type=submit]{
-  background: #F08300;
-  color: #fff;
-  width: auto;
-}
-
-input::placeholder{
-  color: #7a7a7a;
+a {
+  padding: 20px;
+  width: 200px;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #99CCCC;
+  font-size: 24px;
 }
