--- a/SpringWork2020G1/app/src/main/webapp/css/index.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/index.css
@@ -1,33 +1,31 @@
-/* body{
-  font-family: Roboto;
-} */
-
 header {
   display: flex;
   padding: 10px;
+  padding-left: 30px;
   width: 100%;
   height: 50px;
   background-color: #cccccc;
   align-items: center;
-  font-size: 18px;
+  font-size: 120%;
 }
 
 body {
+  font-family: Roboto;
   margin: 0px;
   color: #053C58;
+  text-align: center;
 }
 
 .h1 {
   margin: 60px;
-  font-size: 32px;
-  text-align: center;
+  font-size: 200%;
 }
 
 a {
-  padding: 20px;
-  width: 200px;
-  text-align: center;
+  padding: 2%;
+  margin: 5%;
   border-radius: 10px;
   background-color: #99CCCC;
-  font-size: 24px;
+  font-size: 150%;
+  text-decoration: none;
 }
