--- a/SpringWork2020G1/app/src/main/webapp/css/registUser.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/registUser.css
@@ -1,22 +1,63 @@
+header {
+  display: flex;
+  padding: 10px;
+  padding-left: 30px;
+  width: 100%;
+  height: 50px;
+  background-color: #cccccc;
+  align-items: center;
+  font-size: 120%;
+}
+
 body{
-  font-family: 'UD デジタル 教科書体 NK-B',UD Digi Kyokasho NK-B;
+  font-family: Roboto;
+  margin: 0px;
+  color: #053C58;
   text-align: center;
 }
 
-input{
-  border: none;
-  margin: 0.5rem 0;
-  padding: 0.5rem 1rem;
-  border-radius: 0.3rem;
-  background: #fffbeb;
+.h1 {
+  margin-left: 2%;
+  margin-right: 2%;
+  padding-top: 2%;
+  padding-left: 6%;
+  height: 30px;
+  text-align: left;
+  font-size: 100%;
+  border-bottom: 1px  solid #cccccc;
 }
 
-input[type=submit]{
-  background: #F08300;
-  color: #fff;
+form {
+  padding: 30px;
+}
+
+.tag {
+  margin-left: 25%;
+  text-align: left;
+}
+
+input[type=text], input[type=password]{
+    margin-bottom: 15px;
+    border: 1px solid #053C58;
+    width: 50%;
+    height: 60px;
+    border-radius: 10px;
+    font-size: 150%;
+}
+
+input::placeholder {
+  color: #c4c4c4;
+  text-align: left;
+}
+
+a, input[type="submit"] {
+  padding: 2% 5% 2% 5%;
+  margin: 2% 10% 2% 10%;
   width: auto;
-}
-
-input::placeholder{
-  color: #7a7a7a;
+  height: auto;
+  border-radius: 10px;
+  border: none;
+  background-color: #99CCCC;
+  font-size: 150%;
+  text-decoration: none;
 }
