--- a/SpringWork2020G1/app/src/main/webapp/css/main.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/main.css
@@ -5,8 +5,24 @@ header {
   width: 100%;
   height: 50px;
   background-color: #cccccc;
-  align-items: center;
   font-size: 120%;
+}
+
+header a {
+  border-radius: 100%;
+  padding: 10px 18px 15px 18px;
+  border: none;
+  background-color: #99CCCC;
+  font-size: 160%;
+  color: #fff;
+  text-decoration: none;
+  align-items: center;
+}
+
+.right {
+  display: block;
+  text-align: right;
+  width: 80%;
 }
 
 body{
@@ -14,15 +30,6 @@ body{
   margin: 0px;
   color: #053C58;
   text-align: center;
-}
-
-a {
-  border-radius: 100%;
-  border: none;
-  background-color: #99CCCC;
-  font-size: 400%;
-  color: #fff;
-  text-decoration: none;
 }
 
 a:active {
