--- a/SpringWork2020G1/app/src/main/webapp/css/main.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/main.css
@@ -1,28 +1,60 @@
 header {
   display: flex;
-  padding: 10px;
+  padding: 5px 10px 5px 30px;
   padding-left: 30px;
   width: 100%;
-  height: 50px;
+  height: 55px;
   background-color: #cccccc;
-  font-size: 120%;
 }
 
-header a {
+.welcome {
+  font-size: 120%;
+  width: 300px;
+  height: 25px;
+}
+
+.logout {
+  font-size: 9px;
+  width: 100px;
+  height: 25px;
+  position:relative;
+  top: 30px;
+  left:-220px;
+  line-height: 25px;
+  border: none;
+  background-color: #EF858C;
+  box-shadow: 1px 1px 1px #405757;
+}
+
+.logout a {
+  text-decoration: none;
+}
+
+.right a {
   border-radius: 100%;
-  padding: 10px 18px 15px 18px;
+  padding: 10px 11px 10px 11px;
   border: none;
   background-color: #99CCCC;
-  font-size: 160%;
+  font-size: 210%;
   color: #fff;
   text-decoration: none;
-  align-items: center;
+  vertical-align: middle;
+  box-shadow: 1px 1px 1px #405757;
+  text-shadow:  1px  1px 1px #009999, -1px  1px 1px #009999, 1px  -1px 1px #009999, -1px  -1px 1px #009999;
+}
+
+.right a:hover, .logout:hover {
+  box-shadow:
+    1px 1px 3px transparent,
+    -1px -1px 3px transparent,
+    inset 1px 1px 3px #405757,
+    inset -1px -1px 3px #fff;;
 }
 
 .right {
   display: block;
   text-align: right;
-  width: 80%;
+  width: 70%;
 }
 
 body{
@@ -32,6 +64,39 @@ body{
   text-align: center;
 }
 
-a:active {
-  color: #fff;
-}
+
+/* <!-- ⭐️⭐️　↓cssの途中だから消さないで　⭐️⭐️ -->
+    <!-- <%int i = 0;%>
+    <%for (Project project : projectList) {%>
+      <%int k = 0;%>
+      <%project = projectList.get(i);%>
+        プロジェクト名
+        <td><%=project.getProjectTITLE()%></td>
+        概要
+        <td><%=project.getOverview()%></td>
+        期日
+        <td><%=project.getDeadline()%></td>
+        メンバー
+        <td>
+          <%for (Participate participate : participateList) {%>
+            <%participate = participateList.get(k);%>
+            <%if(project.getProjectID() == participate.getPrjId()){%>
+              <%for(int w=0;w<=userList.size()-1;w++){%>
+                <%User user = userList.get(w);%>
+                <%if(participate.getUserId().equals(user.getId())){%>
+                  <%=user.getName()+" "%>
+                <%}%>
+              <%}%>
+            <%}%>
+          <%k++;} %>
+         </td>
+         詳細
+         <td>
+           <c:url value="/ShowProject" var="url" >
+　           <c:param name="id" value="<%=project.getPrjIDStr()%>"/>
+          </c:url>
+          <a href="${url}">リンク</a>
+         </td>
+      </tr>
+      <%i = i+1;%>
+    <%}%> --> */
