--- a/SpringWork2020G1/app/src/main/webapp/css/registUser.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/registUser.css
@@ -60,6 +60,15 @@ a, input[type="submit"] {
   background-color: #99CCCC;
   font-size: 150%;
   text-decoration: none;
+  box-shadow: 1px 1px 1px #405757;
+}
+
+a:hover, input[type="submit"]:hover{
+  box-shadow:
+    1px 1px 3px transparent,
+    -1px -1px 3px transparent,
+    inset 1px 1px 3px #405757,
+    inset -1px -1px 3px #fff;;
 }
 
 a:active, input[type="submit"]:active {
