--- a/SpringWork2020G1/app/src/main/webapp/css/login.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/login.css
@@ -1,8 +1,9 @@
+Login.css
+
 header {
   display: flex;
   padding: 10px;
   padding-left: 30px;
-  width: 100%;
   height: 50px;
   background-color: #cccccc;
   align-items: center;
@@ -65,7 +66,7 @@ a, input[type="submit"] {
   background-color: #99CCCC;
   font-size: 150%;
   text-decoration: none;
-  box-shadow: 1px 1px 1px #405757;
+  box-shadow: 1px 1px 3px #405757;
 }
 
 a:hover, input[type="submit"]:hover{
@@ -73,7 +74,8 @@ a:hover, input[type="submit"]:hover{
     1px 1px 3px transparent,
     -1px -1px 3px transparent,
     inset 1px 1px 3px #405757,
-    inset -1px -1px 3px #fff;;
+    inset -1px -1px 3px #fff;
+  transition: all 0.3s;
 }
 
 a:active, input[type="submit"]:active {
