--- a/SpringWork2020G1/app/src/main/webapp/css/login.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/login.css
@@ -1,5 +1,3 @@
-Login.css
-
 header {
   display: flex;
   padding: 10px;
@@ -31,6 +29,11 @@ body{
 
 .h2 {
   font-size: 150%;
+}
+
+.error {
+  color: #ff0000;
+  font-size: 21px;
 }
 
 form {
