--- a/SpringWork2020G1/app/src/main/webapp/css/index.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/index.css
@@ -23,6 +23,7 @@ body {
 a {
   padding: 2%;
   margin: 5%;
+  color: #053C58;
   border-radius: 10px;
   background-color: #99CCCC;
   font-size: 150%;
