--- a/SpringWork2020G1/app/src/main/webapp/css/login.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/login.css
@@ -67,6 +67,7 @@ a, input[type="submit"] {
   border-radius: 10px;
   border: none;
   background-color: #99CCCC;
+  color: #053C58;
   font-size: 150%;
   text-decoration: none;
   box-shadow: 1px 1px 3px #405757;
