--- a/SpringWork2020G1/app/src/main/webapp/css/main.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/main.css
@@ -115,8 +115,10 @@ header {
 .prj {
   position: relative;
   background-color: #eaeef1;
-  /* margin: 5px 60px 20px 60px; */
+  margin: 5px 60px 20px 60px;
   margin: 0px 60px 50px 60px;
+  /* margin-left: 60px;
+  margin-right: 60px; */
   padding: 15px 30px;
   height: 350px;
 }
