--- a/SpringWork2020G1/app/src/main/webapp/css/showProject.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/showProject.css
@@ -7,6 +7,7 @@ body {
 
 header {
   position: fixed;
+  z-index: 9999;
   display: flex;
   /* display: inline; */
   /* display: inline-block; */
@@ -43,14 +44,14 @@ header {
 
 .header-right-left {
   float: left;
-  width: 80%;
+  width: 70%;
   text-align: right;
 }
 
 .header-right-right {
   float: right;
-  width: 20%;
-  text-align: right;
+  width: 30%;
+  text-align: center
 }
 
 .header-left-top {
