--- a/SpringWork2020G1/app/src/main/webapp/css/showProject.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/showProject.css
@@ -107,7 +107,9 @@ header {
 .header-right-right a:hover,
 .header-left-left a:hover,
 .header-left-right a:hover,
-.prj .view .participate .showTask a:hover {
+.prj .view .participate .showTask a:hover,
+.createTask a:hover,
+.edit:hover {
   box-shadow: 1px 1px 3px transparent, -1px -1px 3px transparent,
     inset 1px 1px 3px #405757, inset -1px -1px 3px #fff;
   transition: all 0.3s;
@@ -115,11 +117,19 @@ header {
 
 .prj {
   position: relative;
-  background-color: #eaeef1;
+  background-color: #E3F4F4;
+  /* margin: 5px 60px 20px 60px; */
+  margin: 0px 90px 50px 325px;
+  padding: 15px 30px;
+  height: 350px;
+}
+
+.prj0 {
+  position: relative;
   /* margin: 5px 60px 20px 60px; */
   margin: 0px 60px 50px 60px;
   padding: 15px 30px;
-  height: 350px;
+  height: 200px;
 }
 
 .prj-header {
@@ -162,10 +172,28 @@ header {
   text-align: right;
 }
 
+.prj-header-right0 {
+  float: right;
+  width: 30%;
+  text-align: right;
+  font-size: 20px;
+}
+
 .prj-title {
+  float: left;
+  width: 80%;
   margin-top: 10px;
   text-align: left;
   font-size: 35px;
+  font-weight: lighter;
+}
+
+.prj-title0 {
+  float: left;
+  width: 100%;
+  margin-top: 10px;
+  text-align: left;
+  font-size: 40px;
   font-weight: lighter;
 }
 
@@ -176,6 +204,17 @@ header {
   padding: 15px;
   text-align: left;
   background-color: #fff;
+  border-radius: 10px;
+  /* border-style: groove; */
+}
+
+.members0 {
+  font-size: 10px;
+  float: left;
+  width: 10%;
+  padding: 15px;
+  text-align: left;
+  background-color: #EAEEF1;
   border-radius: 10px;
   /* border-style: groove; */
 }
@@ -200,6 +239,18 @@ header {
   /* border-style: groove; */
 }
 
+.overview0 {
+  float: right;
+  width: 83%;
+  text-align: left;
+  font-size: 15px;
+  padding: 20px;
+  /* text-align: left; */
+  background-color: #EAEEF1;
+  border-radius: 10px;
+  /* border-style: groove; */
+}
+
 .overview-title {
   font-weight: bold;
   line-height: 40px;
@@ -217,4 +268,40 @@ header {
   width: 100%;
   height: 100%;
   box-shadow: 1px 1px 1px #405757;
+}
+
+.edit {
+  float: right;
+  border-radius: 100%;
+  padding: 15px;
+  border: none;
+  background-color: #fff;
+  font-size: 25px;
+  line-height: 40px;
+  color: #99CCCC;
+  text-decoration: none;
+  box-shadow: 1px 1px 1px #405757;
+  text-shadow: 1px 1px 1px #009999, -1px 1px 1px #009999, 1px -1px 1px #009999,
+    -1px -1px 1px #009999;
+}
+
+.createTask {
+  float: right;
+  text-align: right;
+  margin-right: 90px;
+  margin-bottom: 50px;
+}
+
+.createTask a {
+  border-radius: 100%;
+  padding: 8px;
+  border: none;
+  background-color: #E3F4F4;
+  font-size: 60px;
+  line-height: 57px;
+  color: #fff;
+  text-decoration: none;
+  box-shadow: 1px 1px 1px #405757;
+  text-shadow: 1px 1px 1px #053c58, -1px 1px 1px #053c58, 1px -1px 1px #053c58,
+    -1px -1px 1px #053c58;
 }
