タスクの担当者表示のcss

--- a/SpringWork2020G1/app/src/main/webapp/css/showProject.css
+++ b/SpringWork2020G1/app/src/main/webapp/css/showProject.css
@@ -198,14 +198,20 @@ header {
 }
 
 .members {
-  font-size: 10px;
   float: left;
   width: 10%;
   padding: 15px;
   text-align: left;
+  font-size: 10px;
   background-color: #fff;
   border-radius: 10px;
   /* border-style: groove; */
+}
+
+.view {
+  float: right;
+  width: 60%;
+  text-align: left;
 }
 
 .members0 {
@@ -224,11 +230,6 @@ header {
   line-height: 20px;
 }
 
-.view {
-  float: right;
-  width: 84%;
-  text-align: left;
-}
 
 .overview {
   font-size: 15px;
@@ -273,6 +274,9 @@ header {
 .edit {
   float: right;
   border-radius: 100%;
+  width: 2%;
+  margin-top: 10px;
+  margin: 10px 28px 0px 28px;
   padding: 15px;
   border: none;
   background-color: #fff;
